//---------------------------------------------------------------------
//---------------------------------------------------------------------
"This file is automatically generated. All manual edits will be lost."
//---------------------------------------------------------------------
//---------------------------------------------------------------------
Proto file for the niFake Metadata
//---------------------------------------------------------------------
//---------------------------------------------------------------------
Syntax = "proto3";
//---------------------------------------------------------------------
//---------------------------------------------------------------------
package niFake; 

//---------------------------------------------------------------------
// The NiFakeService definition.
//---------------------------------------------------------------------
service NiFakeService {
  rpc Abort(AbortRequest) returns (AbortResponse) {};
  rpc AcceptListOfDurationsInSeconds(AcceptListOfDurationsInSecondsRequest) returns (AcceptListOfDurationsInSecondsResponse) {};
  rpc BoolArrayOutputFunction(BoolArrayOutputFunctionRequest) returns (BoolArrayOutputFunctionResponse) {};
  rpc DoubleAllTheNums(DoubleAllTheNumsRequest) returns (DoubleAllTheNumsResponse) {};
  rpc EnumArrayOutputFunction(EnumArrayOutputFunctionRequest) returns (EnumArrayOutputFunctionResponse) {};
  rpc EnumInputFunctionWithDefaults(EnumInputFunctionWithDefaultsRequest) returns (EnumInputFunctionWithDefaultsResponse) {};
  rpc ExportAttributeConfigurationBuffer(ExportAttributeConfigurationBufferRequest) returns (ExportAttributeConfigurationBufferResponse) {};
  rpc FetchWaveform(FetchWaveformRequest) returns (FetchWaveformResponse) {};
  rpc GetABoolean(GetABooleanRequest) returns (GetABooleanResponse) {};
  rpc GetANumber(GetANumberRequest) returns (GetANumberResponse) {};
  rpc GetAStringOfFixedMaximumSize(GetAStringOfFixedMaximumSizeRequest) returns (GetAStringOfFixedMaximumSizeResponse) {};
  rpc GetAStringUsingPythonCode(GetAStringUsingPythonCodeRequest) returns (GetAStringUsingPythonCodeResponse) {};
  rpc GetAnIviDanceString(GetAnIviDanceStringRequest) returns (GetAnIviDanceStringResponse) {};
  rpc GetAnIviDanceWithATwistString(GetAnIviDanceWithATwistStringRequest) returns (GetAnIviDanceWithATwistStringResponse) {};
  rpc GetArrayForPythonCodeCustomType(GetArrayForPythonCodeCustomTypeRequest) returns (GetArrayForPythonCodeCustomTypeResponse) {};
  rpc GetArrayForPythonCodeDouble(GetArrayForPythonCodeDoubleRequest) returns (GetArrayForPythonCodeDoubleResponse) {};
  rpc GetArraySizeForPythonCode(GetArraySizeForPythonCodeRequest) returns (GetArraySizeForPythonCodeResponse) {};
  rpc GetArrayUsingIviDance(GetArrayUsingIviDanceRequest) returns (GetArrayUsingIviDanceResponse) {};
  rpc GetAttributeViBoolean(GetAttributeViBooleanRequest) returns (GetAttributeViBooleanResponse) {};
  rpc GetAttributeViInt32(GetAttributeViInt32Request) returns (GetAttributeViInt32Response) {};
  rpc GetAttributeViInt64(GetAttributeViInt64Request) returns (GetAttributeViInt64Response) {};
  rpc GetAttributeViReal64(GetAttributeViReal64Request) returns (GetAttributeViReal64Response) {};
  rpc GetAttributeViString(GetAttributeViStringRequest) returns (GetAttributeViStringResponse) {};
  rpc GetCalDateAndTime(GetCalDateAndTimeRequest) returns (GetCalDateAndTimeResponse) {};
  rpc GetCalInterval(GetCalIntervalRequest) returns (GetCalIntervalResponse) {};
  rpc GetCustomType(GetCustomTypeRequest) returns (GetCustomTypeResponse) {};
  rpc GetCustomTypeArray(GetCustomTypeArrayRequest) returns (GetCustomTypeArrayResponse) {};
  rpc GetEnumValue(GetEnumValueRequest) returns (GetEnumValueResponse) {};
  rpc GetError(GetErrorRequest) returns (GetErrorResponse) {};
  rpc GetLastCalDateAndTime(GetLastCalDateAndTimeRequest) returns (GetLastCalDateAndTimeResponse) {};
  rpc ImportAttributeConfigurationBuffer(ImportAttributeConfigurationBufferRequest) returns (ImportAttributeConfigurationBufferResponse) {};
  rpc InitWithOptions(InitWithOptionsRequest) returns (InitWithOptionsResponse) {};
  rpc Initiate(InitiateRequest) returns (InitiateResponse) {};
  rpc LockSession(LockSessionRequest) returns (LockSessionResponse) {};
  rpc MultipleArrayTypes(MultipleArrayTypesRequest) returns (MultipleArrayTypesResponse) {};
  rpc MultipleArraysSameSize(MultipleArraysSameSizeRequest) returns (MultipleArraysSameSizeResponse) {};
  rpc OneInputFunction(OneInputFunctionRequest) returns (OneInputFunctionResponse) {};
  rpc ParametersAreMultipleTypes(ParametersAreMultipleTypesRequest) returns (ParametersAreMultipleTypesResponse) {};
  rpc PoorlyNamedSimpleFunction(PoorlyNamedSimpleFunctionRequest) returns (PoorlyNamedSimpleFunctionResponse) {};
  rpc Read(ReadRequest) returns (ReadResponse) {};
  rpc ReadFromChannel(ReadFromChannelRequest) returns (ReadFromChannelResponse) {};
  rpc ReturnANumberAndAString(ReturnANumberAndAStringRequest) returns (ReturnANumberAndAStringResponse) {};
  rpc ReturnDurationInSeconds(ReturnDurationInSecondsRequest) returns (ReturnDurationInSecondsResponse) {};
  rpc ReturnListOfDurationsInSeconds(ReturnListOfDurationsInSecondsRequest) returns (ReturnListOfDurationsInSecondsResponse) {};
  rpc ReturnMultipleTypes(ReturnMultipleTypesRequest) returns (ReturnMultipleTypesResponse) {};
  rpc SetAttributeViBoolean(SetAttributeViBooleanRequest) returns (SetAttributeViBooleanResponse) {};
  rpc SetAttributeViInt32(SetAttributeViInt32Request) returns (SetAttributeViInt32Response) {};
  rpc SetAttributeViInt64(SetAttributeViInt64Request) returns (SetAttributeViInt64Response) {};
  rpc SetAttributeViReal64(SetAttributeViReal64Request) returns (SetAttributeViReal64Response) {};
  rpc SetAttributeViString(SetAttributeViStringRequest) returns (SetAttributeViStringResponse) {};
  rpc SetCustomType(SetCustomTypeRequest) returns (SetCustomTypeResponse) {};
  rpc SetCustomTypeArray(SetCustomTypeArrayRequest) returns (SetCustomTypeArrayResponse) {};
  rpc StringValuedEnumInputFunctionWithDefaults(StringValuedEnumInputFunctionWithDefaultsRequest) returns (StringValuedEnumInputFunctionWithDefaultsResponse) {};
  rpc TwoInputFunction(TwoInputFunctionRequest) returns (TwoInputFunctionResponse) {};
  rpc UnlockSession(UnlockSessionRequest) returns (UnlockSessionResponse) {};
  rpc Use64BitNumber(Use64BitNumberRequest) returns (Use64BitNumberResponse) {};
  rpc WriteWaveform(WriteWaveformRequest) returns (WriteWaveformResponse) {};
  rpc Close(CloseRequest) returns (CloseResponse) {};
  rpc ErrorMessage(ErrorMessageRequest) returns (ErrorMessageResponse) {};
  rpc FancySelfTest(FancySelfTestRequest) returns (FancySelfTestResponse) {};
  rpc SelfTest(SelfTestRequest) returns (SelfTestResponse) {};
}

//---------------------------------------------------------------------
// The NiFakeAttributes definition.
//---------------------------------------------------------------------
enum NiFakeAttributes {
  NIFAKE_UNSPECIFIED = 0;
  NIFAKE_READ_WRITE_BOOL = 1000000;
  NIFAKE_READ_WRITE_DOUBLE = 1000001;
  NIFAKE_READ_WRITE_STRING = 1000002;
  NIFAKE_READ_WRITE_COLOR = 1000003;
  NIFAKE_READ_WRITE_INTEGER = 1000004;
  NIFAKE_FLOAT_ENUM = 1000005;
  NIFAKE_READ_WRITE_INT64 = 1000006;
  NIFAKE_READ_WRITE_DOUBLE_WITH_CONVERTER = 1000007;
  NIFAKE_READ_WRITE_INTEGER_WITH_CONVERTER = 1000008;
  NIFAKE_READ_WRITE_DOUBLE_WITH_REPEATED_CAPABILITY = 1000009;
  NIFAKE_READ_WRITE_STRING_REPEATED_CAPABILITY = 1000010;
}

//---------------------------------------------------------------------
// The NiFakeEnums definition.
//---------------------------------------------------------------------
enum NiFakeValues {
  NIFAKE_UNSPECIFIED = 0;
  NIFAKE_PINK = 44;
  NIFAKE_AQUA = 43;
  NIFAKE_GREEN = 45;
  NIFAKE_BLACK = 42;
  NIFAKE_RED = 1;
  NIFAKE_BLUE = 2;
  NIFAKE_YELLOW = 5;
  NIFAKE_BLACK = 42;
  NIFAKE_RED = 1;
  NIFAKE_BLUE = 2;
  NIFAKE_YELLOW = 5;
  NIFAKE_BLACK = 42;
  NIFAKE_RED = 1;
  NIFAKE_BLUE = 2;
  NIFAKE_YELLOW = 5;
  NIFAKE_BLACK = 42;
  NIFAKE_THREE_POINT_FIVE = 3.5;
  NIFAKE_FOUR_POINT_FIVE = 4.5;
  NIFAKE_FIVE_POINT_FIVE = 5.5;
  NIFAKE_SIX_POINT_FIVE = 6.5;
  NIFAKE_SEVEN_POINT_FIVE = 7.5;
  NIFAKE_ANDROID = Android;
  NIFAKE_IOS = iOS;
  NIFAKE_NONE = None;
  NIFAKE_LEONARDO = 0;
  NIFAKE_DONATELLO = 1;
  NIFAKE_RAPHAEL = 2;
  NIFAKE_MICHELANGELO = 3;
}


message AbortRequest {
  uint32 vi = 1  
}

message AbortResponse {
  int32 status = 1;
}

message AcceptListOfDurationsInSecondsRequest {
  uint32 vi = 1  
  int32 count = 2  
  double delays = 3  
}

message AcceptListOfDurationsInSecondsResponse {
  int32 status = 1;
}

message BoolArrayOutputFunctionRequest {
  uint32 vi = 1  
  int32 number_of_elements = 2  
}

message BoolArrayOutputFunctionResponse {
  int32 status = 1;
  bool an_array = 2  
}

message DoubleAllTheNumsRequest {
  uint32 vi = 1  
  int32 number_count = 2  
  double numbers = 3  
}

message DoubleAllTheNumsResponse {
  int32 status = 1;
}

message EnumArrayOutputFunctionRequest {
  uint32 vi = 1  
  int32 number_of_elements = 2  
}

message EnumArrayOutputFunctionResponse {
  int32 status = 1;
  bytes an_array = 2  
}

message EnumInputFunctionWithDefaultsRequest {
  uint32 vi = 1  
  bytes a_turtle = 2  
}

message EnumInputFunctionWithDefaultsResponse {
  int32 status = 1;
}

message ExportAttributeConfigurationBufferRequest {
  uint32 vi = 1  
  int32 size_in_bytes = 2  
}

message ExportAttributeConfigurationBufferResponse {
  int32 status = 1;
  bytes configuration = 2  
}

message FetchWaveformRequest {
  uint32 vi = 1  
  int32 number_of_samples = 2  
}

message FetchWaveformResponse {
  int32 status = 1;
  double waveform_data = 2  
  int32 actual_number_of_samples = 3  
}

message GetABooleanRequest {
  uint32 vi = 1  
}

message GetABooleanResponse {
  int32 status = 1;
  bool a_boolean = 2  
}

message GetANumberRequest {
  uint32 vi = 1  
}

message GetANumberResponse {
  int32 status = 1;
  bytes a_number = 2  
}

message GetAStringOfFixedMaximumSizeRequest {
  uint32 vi = 1  
}

message GetAStringOfFixedMaximumSizeResponse {
  int32 status = 1;
  string a_string = 2  
}

message GetAStringUsingPythonCodeRequest {
  uint32 vi = 1  
  bytes a_number = 2  
}

message GetAStringUsingPythonCodeResponse {
  int32 status = 1;
  string a_string = 2  
}

message GetAnIviDanceStringRequest {
  uint32 vi = 1  
  int32 buffer_size = 2  
}

message GetAnIviDanceStringResponse {
  int32 status = 1;
  string a_string = 2  
}

message GetAnIviDanceWithATwistStringRequest {
  uint32 vi = 1  
  int32 buffer_size = 2  
}

message GetAnIviDanceWithATwistStringResponse {
  int32 status = 1;
  string a_string = 2  
  int32 actual_size = 3  
}

message GetArrayForPythonCodeCustomTypeRequest {
  uint32 vi = 1  
  int32 number_of_elements = 2  
}

message GetArrayForPythonCodeCustomTypeResponse {
  int32 status = 1;
  repeated struct CustomStruct array_out = 2  
}

message GetArrayForPythonCodeDoubleRequest {
  uint32 vi = 1  
  int32 number_of_elements = 2  
}

message GetArrayForPythonCodeDoubleResponse {
  int32 status = 1;
  double array_out = 2  
}

message GetArraySizeForPythonCodeRequest {
  uint32 vi = 1  
}

message GetArraySizeForPythonCodeResponse {
  int32 status = 1;
  int32 size_out = 2  
}

message GetArrayUsingIviDanceRequest {
  uint32 vi = 1  
  int32 array_size = 2  
}

message GetArrayUsingIviDanceResponse {
  int32 status = 1;
  double array_out = 2  
}

message GetAttributeViBooleanRequest {
  uint32 vi = 1  
  string channel_name = 2  
  FakeAttributes attribute_id = 3  
}

message GetAttributeViBooleanResponse {
  int32 status = 1;
  bool attribute_value = 2  
}

message GetAttributeViInt32Request {
  uint32 vi = 1  
  string channel_name = 2  
  FakeAttributes attribute_id = 3  
}

message GetAttributeViInt32Response {
  int32 status = 1;
  int32 attribute_value = 2  
}

message GetAttributeViInt64Request {
  uint32 vi = 1  
  string channel_name = 2  
  FakeAttributes attribute_id = 3  
}

message GetAttributeViInt64Response {
  int32 status = 1;
  int64 attribute_value = 2  
}

message GetAttributeViReal64Request {
  uint32 vi = 1  
  string channel_name = 2  
  FakeAttributes attribute_id = 3  
}

message GetAttributeViReal64Response {
  int32 status = 1;
  double attribute_value = 2  
}

message GetAttributeViStringRequest {
  uint32 vi = 1  
  string channel_name = 2  
  FakeAttributes attribute_id = 3  
  int32 buffer_size = 4  
}

message GetAttributeViStringResponse {
  int32 status = 1;
  string attribute_value = 2  
}

message GetCalDateAndTimeRequest {
  uint32 vi = 1  
  int32 cal_type = 2  
}

message GetCalDateAndTimeResponse {
  int32 status = 1;
  int32 month = 2  
  int32 day = 3  
  int32 year = 4  
  int32 hour = 5  
  int32 minute = 6  
}

message GetCalIntervalRequest {
  uint32 vi = 1  
}

message GetCalIntervalResponse {
  int32 status = 1;
  int32 months = 2  
}

message GetCustomTypeRequest {
  uint32 vi = 1  
}

message GetCustomTypeResponse {
  int32 status = 1;
  struct CustomStruct cs = 2  
}

message GetCustomTypeArrayRequest {
  uint32 vi = 1  
  int32 number_of_elements = 2  
}

message GetCustomTypeArrayResponse {
  int32 status = 1;
  repeated struct CustomStruct cs = 2  
}

message GetEnumValueRequest {
  uint32 vi = 1  
}

message GetEnumValueResponse {
  int32 status = 1;
  int32 a_quantity = 2  
  bytes a_turtle = 3  
}

message GetErrorRequest {
  uint32 vi = 1  
  int32 buffer_size = 2  
}

message GetErrorResponse {
  int32 status = 1;
  int32 error_code = 2  
  string description = 3  
}

message GetLastCalDateAndTimeRequest {
  uint32 vi = 1  
  int32 cal_type = 2  
}

message GetLastCalDateAndTimeResponse {
  int32 status = 1;
  hightime.datetime month = 2  
}

message ImportAttributeConfigurationBufferRequest {
  uint32 vi = 1  
  int32 size_in_bytes = 2  
  bytes configuration = 3  
}

message ImportAttributeConfigurationBufferResponse {
  int32 status = 1;
}

message InitWithOptionsRequest {
  string resource_name = 1  
  bool id_query = 2  
  bool reset_device = 3  
  string option_string = 4  
}

message InitWithOptionsResponse {
  int32 status = 1;
  uint32 vi = 2  
}

message InitiateRequest {
  uint32 vi = 1  
}

message InitiateResponse {
  int32 status = 1;
}

message LockSessionRequest {
  uint32 vi = 1  
}

message LockSessionResponse {
  int32 status = 1;
  bool caller_has_lock = 2  
}

message MultipleArrayTypesRequest {
  uint32 vi = 1  
  int32 output_array_size = 2  
  int32 input_array_sizes = 3  
  double input_array_of_floats = 4  
  bytes input_array_of_integers = 5  
}

message MultipleArrayTypesResponse {
  int32 status = 1;
  double output_array = 2  
  double output_array_of_fixed_length = 3  
}

message MultipleArraysSameSizeRequest {
  uint32 vi = 1  
  double values1 = 2  
  double values2 = 3  
  double values3 = 4  
  double values4 = 5  
  int32 size = 6  
}

message MultipleArraysSameSizeResponse {
  int32 status = 1;
}

message OneInputFunctionRequest {
  uint32 vi = 1  
  int32 a_number = 2  
}

message OneInputFunctionResponse {
  int32 status = 1;
}

message ParametersAreMultipleTypesRequest {
  uint32 vi = 1  
  bool a_boolean = 2  
  int32 an_int32 = 3  
  int64 an_int64 = 4  
  bytes an_int_enum = 5  
  double a_float = 6  
  double a_float_enum = 7  
  int32 string_size = 8  
  string a_string = 9  
}

message ParametersAreMultipleTypesResponse {
  int32 status = 1;
}

message PoorlyNamedSimpleFunctionRequest {
  uint32 vi = 1  
}

message PoorlyNamedSimpleFunctionResponse {
  int32 status = 1;
}

message ReadRequest {
  uint32 vi = 1  
  double maximum_time = 2  
}

message ReadResponse {
  int32 status = 1;
  double reading = 2  
}

message ReadFromChannelRequest {
  uint32 vi = 1  
  string channel_name = 2  
  int32 maximum_time = 3  
}

message ReadFromChannelResponse {
  int32 status = 1;
  double reading = 2  
}

message ReturnANumberAndAStringRequest {
  uint32 vi = 1  
}

message ReturnANumberAndAStringResponse {
  int32 status = 1;
  bytes a_number = 2  
  string a_string = 3  
}

message ReturnDurationInSecondsRequest {
  uint32 vi = 1  
}

message ReturnDurationInSecondsResponse {
  int32 status = 1;
  double timedelta = 2  
}

message ReturnListOfDurationsInSecondsRequest {
  uint32 vi = 1  
  int32 number_of_elements = 2  
}

message ReturnListOfDurationsInSecondsResponse {
  int32 status = 1;
  double timedeltas = 2  
}

message ReturnMultipleTypesRequest {
  uint32 vi = 1  
  int32 array_size = 2  
  int32 string_size = 3  
}

message ReturnMultipleTypesResponse {
  int32 status = 1;
  bool a_boolean = 2  
  int32 an_int32 = 3  
  int64 an_int64 = 4  
  bytes an_int_enum = 5  
  double a_float = 6  
  double a_float_enum = 7  
  double an_array = 8  
  string a_string = 9  
}

message SetAttributeViBooleanRequest {
  uint32 vi = 1  
  string channel_name = 2  
  FakeAttributes attribute_id = 3  
  bool attribute_value = 4  
}

message SetAttributeViBooleanResponse {
  int32 status = 1;
}

message SetAttributeViInt32Request {
  uint32 vi = 1  
  string channel_name = 2  
  FakeAttributes attribute_id = 3  
  int32 attribute_value = 4  
}

message SetAttributeViInt32Response {
  int32 status = 1;
}

message SetAttributeViInt64Request {
  uint32 vi = 1  
  string channel_name = 2  
  FakeAttributes attribute_id = 3  
  int64 attribute_value = 4  
}

message SetAttributeViInt64Response {
  int32 status = 1;
}

message SetAttributeViReal64Request {
  uint32 vi = 1  
  string channel_name = 2  
  FakeAttributes attribute_id = 3  
  double attribute_value = 4  
}

message SetAttributeViReal64Response {
  int32 status = 1;
}

message SetAttributeViStringRequest {
  uint32 vi = 1  
  string channel_name = 2  
  FakeAttributes attribute_id = 3  
  string attribute_value = 4  
}

message SetAttributeViStringResponse {
  int32 status = 1;
}

message SetCustomTypeRequest {
  uint32 vi = 1  
  struct CustomStruct cs = 2  
}

message SetCustomTypeResponse {
  int32 status = 1;
}

message SetCustomTypeArrayRequest {
  uint32 vi = 1  
  int32 number_of_elements = 2  
  repeated struct CustomStruct cs = 3  
}

message SetCustomTypeArrayResponse {
  int32 status = 1;
}

message StringValuedEnumInputFunctionWithDefaultsRequest {
  uint32 vi = 1  
  string a_mobile_o_s_name = 2  
}

message StringValuedEnumInputFunctionWithDefaultsResponse {
  int32 status = 1;
}

message TwoInputFunctionRequest {
  uint32 vi = 1  
  double a_number = 2  
  string a_string = 3  
}

message TwoInputFunctionResponse {
  int32 status = 1;
}

message UnlockSessionRequest {
  uint32 vi = 1  
}

message UnlockSessionResponse {
  int32 status = 1;
  bool caller_has_lock = 2  
}

message Use64BitNumberRequest {
  uint32 vi = 1  
  int64 input = 2  
}

message Use64BitNumberResponse {
  int32 status = 1;
  int64 output = 2  
}

message WriteWaveformRequest {
  uint32 vi = 1  
  int32 number_of_samples = 2  
  double waveform = 3  
}

message WriteWaveformResponse {
  int32 status = 1;
}

message CloseRequest {
  uint32 vi = 1  
}

message CloseResponse {
  int32 status = 1;
}

message ErrorMessageRequest {
  uint32 vi = 1  
  int32 error_code = 2  
}

message ErrorMessageResponse {
  int32 status = 1;
  string error_message = 2  
}

message FancySelfTestRequest {
  uint32 vi = 1  
}

message FancySelfTestResponse {
  int32 status = 1;
}

message SelfTestRequest {
  uint32 vi = 1  
}

message SelfTestResponse {
  int32 status = 1;
  bytes self_test_result = 2  
  string self_test_message = 3  
}
